# STUDIO

./: .gitignore  README.md  config.yaml  langgraph.json  pyproject.toml
app/: agent.py  server.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: index.html
